WeatherTopAppBar file made

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="traf">Traf</string>
     <string name="nav_davis_title">Davis</string>
     <string name="davis">Davis</string>
+    <string name="back_button">Back</string>
 </resources>
