svg files adjusted and structure fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="current_weather">Current Weather</string>
     <string name="nav_hmc_title">HMC Weather</string>
     <string name="hmc">HMC</string>
+    <string name="trafalgar">Trafalgar</string>
 </resources>
